force-app/main/default/objects/UnifiedLinkssotContactPointPhoneTun1__dlm/UnifiedLinkssotContactPointPhoneTun1__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Bridge</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
        <referenceEntityName>ContactPointPhoneIdentityLink</referenceEntityName>
    </mktDataModelAttributes>
</CustomObject>