force-app/main/default/objects/UnifiedLinkssotContactPointPhoneTun1__dlm/fields/KQ_SourceRecordId__c.field-meta.xml
<CustomField>
    <fullName>KQ_SourceRecordId__c</fullName>
    <label>Key Qualifier Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>KQ_SourceRecordId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>