force-app/main/default/objects/UnifiedLinkssotContactPointPhoneTun1__dlm/fields/rel_1712301889253_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1712301889253_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UnifiedLinkssotContactPointPhoneTun1_rel</label>
    <referenceTo>UnifiedssotContactPointPhoneTun1__dlm</referenceTo>
    <relationshipLabel>UnifiedLinkssotContactPointPhoneTun1_rel</relationshipLabel>
    <relationshipName>rel_1712301889253_end</relationshipName>
    <type>Lookup</type>
</CustomField>